# LegalApp-Frappe

./: .gitignore  LICENSE  README.md  pyproject.toml
legal_app/: api.py  hooks.py  modules.txt
legal_app/fixtures/: calendar_view.json  case_stages_master.json  case_types_master.json  client_script.json  currency_master.json  custom_html_block.json  lawyer_master.json  meril_role_master.json  role.json
legal_app/legal_case_management/dashboard_chart/case_type_distribution/: case_type_distribution.json
legal_app/legal_case_management/dashboard_chart/distribution_management_case_type_distribution/: distribution_management_case_type_distribution.json
legal_app/legal_case_management/dashboard_chart/distribution_management_meril_roles/: distribution_management_meril_roles.json
legal_app/legal_case_management/dashboard_chart/distribution_management_no._of_closed_cases/: distribution_management_no._of_closed_cases.json
legal_app/legal_case_management/dashboard_chart/distribution_management_no._of_open_cases/: distribution_management_no._of_open_cases.json
legal_app/legal_case_management/dashboard_chart/distribution_management_total_no._of_cases/: distribution_management_total_no._of_cases.json
legal_app/legal_case_management/dashboard_chart/ip_case_type_distribution/: ip_case_type_distribution.json
legal_app/legal_case_management/dashboard_chart/ip_meril_roles/: ip_meril_roles.json
legal_app/legal_case_management/dashboard_chart/ip_no._of_closed_cases/: ip_no._of_closed_cases.json
legal_app/legal_case_management/dashboard_chart/meril_roles/: meril_roles.json
(+150 files in other folders)
